--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,7 +45,7 @@ td {
     text-align: center;
     border: 1px solid black;
 }
-input[type=text] {
+input {
     border: 0; 
     border-radius: 5px; 
 }
@@ -60,7 +60,10 @@ input[type=text] {
     font-weight: bold;
     background-color: white;
     transition-duration: 0.2s;
-}  
+}
 .button:hover {
+    color: black;
+}
+.color-black {
     color: black;
 }
